# KingdeeMCP

./: .gitignore  .mcp.json.example  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  harness-check.yml
docs/: AGENT-API.md  index.html  sitemap.xml  推广文章-知乎掘金CSDN.md  金蝶文档地址.txt
examples/: README.md  cost-mgmt.md  failure_log.jsonl  inventory-query.md  material-query.md  operation-log.md  partner-query.md  procurement-audit.md  procurement-create.md  procurement-query.md  production-mgmt.md  purchase-inquiry.md  push-stock-in.md  quality-inspection.md  query-examples.md  sales-query.md  stock-transfer.md  workflow-approve.md  workflow-hints.md
files/: .env.example  README.md  server.py
harness/: __init__.py  feedback_loop.py  rules.py
scripts/: check_harness.py  extract_failures.py  extract_remember.py  failure_log.py  mcp_protocol_test.py  mcp_test.py  scenario_test.py
src/kingdee_mcp/: __init__.py  server.py
tests/: conftest.py  test_harness.py  test_integration.py  test_server.py  test_tools_mock.py
tests/e2e/: test_full_workflow.py  test_purchase_workflow.py  test_smoke.py
