[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kingdee-mcp"
version = "0.1.0"
description = "MCP Server for Kingdee Cloud K/3 - Works with any MCP-compatible AI client"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
keywords = ["mcp", "kingdee", "erp", "ai", "k3cloud", "claude", "cursor", "windsurf", "cline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/kingdee-mcp"
Repository = "https://github.com/yourusername/kingdee-mcp"
Documentation = "https://github.com/yourusername/kingdee-mcp#readme"

[project.scripts]
kingdee-mcp = "kingdee_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kingdee_mcp"]
